--- a/a7.css
+++ b/a7.css
@@ -30,14 +30,10 @@
 }
 
 .tokenizer-module__tokenizerContainer .tokenizer-module__token.tokenizer-module__bkEditedNode{
-    background: #af30c1 !important;
+    background: #ffffff !important;
 }
 
 .tokenizer-module__tokenizerContainer .tokenizer-module__token:after{
-    background-color: rgb(255, 65, 65);
-}
-
-.button-module__backgroundLight.button-module__secondary{
     background-color: rgb(255, 65, 65);
 }
 
