--- a/style8.css
+++ b/style8.css
@@ -49,6 +49,12 @@ body {
     color: #4c4c4c !important;
 }
 
+.answer-title-module__titleText{
+    font-size: 13px !important;
+    font-weight: 300 !important;
+    line-height: 16px !important;
+    color: #4c4c4c !important;
+}
 
 .tile-size-xs .bk-title-description .bk-title-section {
     display: flex !important;
