--- a/sty10.css
+++ b/sty10.css
@@ -68,6 +68,13 @@ body {
     justify-content: center !important;
 }
 
+.answer-title-module__titleText:has(.kpi-module__kpi .kpi-module__hero) {
+    font-size: 13px !important;
+    font-weight: 300 !important;
+    line-height: 16px !important;
+    color: #4c4c4c !important;
+}
+
 @media (min-width: 1014px) and (max-width: 1279px) {
     .tile-extraSmall .kpi-module__hero {
         font-size: 32px !important;
