--- a/sty2.css
+++ b/sty2.css
@@ -88,6 +88,13 @@ body {
     color: #4c4c4c !important;
 }
 
+.answer-content-module__compactVizContainer:has(.kpi-module__kpi .kpi-module__heroDataContainer){
+    font-size: 13px !important;
+    font-weight: 300 !important;
+    line-height: 16px !important;
+    color: #4c4c4c !important;
+}
+
 .tile-size-xs .bk-title-description .bk-title-section {
     display: flex !important;
     justify-content: center !important;
