--- a/sty5.css
+++ b/sty5.css
@@ -7,62 +7,66 @@ body {
     font-weight: 500 !important;
 }
 
-.module__pinboardLbEmbedHeader {
+/* Hiding footer logo */
+.bk-embed .bk-embed-powered-by-ts-ribbon {
     display: none !important;
 }
 
-.pinboard-header-module__embedPinboardHeader {
+/* Hiding Header */
+/* .bk-pinboard-data-viz .bk-pinboard-viz-header {
+    display: none !important;
+} */
+
+/* Hiding title only*/
+/* .bk-pinboard-data-viz .bk-title {
+    display: none !important;
+} */
+
+/* removing extra chart padding */
+.bk-pinboard-data-viz {
+    padding: 0 !important;
+}
+
+/* removing chart span-tag of hovering */
+/* .highcharts-axis-title {
+  display: none !important;
+} */
+
+/* chart Footer removing */
+.bk-embed-powered-by-ts-ribbon .bk-powered-footer {
     display: none !important;
 }
 
-/* changing background color of the liveboard */
-.react-grid-layout,
-.pinboard-content-module__gridContainer {
-    background: white !important;
+/* hiding filter panel in header */
+/* .bk-filter-panel {
+    display: none !important;
+} */
+
+/* For action-menu*/
+/* .bk-pinboard-card .bk-pb-card-action-menu {
+    display: block !important;
+} */
+
+.bk-pinboard-card .bk-pb-card-action-menu .bk-action-button-container {
+    visibility: visible !important;
+    opacity: 1 !important;
+    transform: translateX(4px) !important;
 }
 
-/* layout border */
-.react-grid-item.cssTransforms {
-    border: none !important;
-    border-radius: none !important;
-}
-
-/* layout box-shadow */
-.react-grid-item.cssTransforms:hover {
-    box-shadow: rgba(0, 0, 0, 0.1) 0px 20px 25px -5px, rgba(0, 0, 0, 0.04) 0px 10px 10px -5px !important;
-}
-
-.button-module__buttonWrapper {
+.bk-title-description .bk-description {
     display: none !important;
 }
 
-.footer-module__footerContainer {
+/********************************LIVEBOARD FILTERS***************************/
+
+/* Hiding entire header section in liveboard*/
+.bk-pinboard-ribbon {
     display: none !important;
 }
 
-/* hiding header of liveboard */
-.pinboard-header-module__pinboardHeaderContainer {
-    display: none !important;
-}
+/********************************LIVEBOARD KPI***************************/
 
-/* Hiding footer */
-.footer-module__footerContainer.layout-module__horizontal {
-    display: none !important;
-}
-
-/* removing description text from both charts and KPI */
-.answer-title-module__descriptionTextOneLine {
-    display: none !important;
-}
-
-/* removing box shadow */
-.react-grid-item.pinboard-content-module__tile {
-    box-shadow: none !important;
-}
-
-
-/* *****KPI***** */
-
+/*KPI Title Cuztomizations*/
 .bk-title-description .bk-title-section .bk-title {
     /* font-size: 24px !important; */
     /* font-weight:600 !important; */
@@ -96,16 +100,8 @@ body {
     justify-content: center !important;
 }
 
-/* KPI title */
-.answer-content-module__compactVizContainer:has(.kpi-module__kpi .kpi-module__heroDataContainer){
-    font-size: 13px !important;
-    font-weight: 300 !important;
-    line-height: 16px !important;
-    color: #4c4c4c !important;
-}
-
 @media (min-width: 1014px) and (max-width: 1279px) {
-    .tile-extraSmall .kpi-module__hero {
+    .tile-size-xs .kpi-module__hero {
         font-size: 32px !important;
         font-weight: 300 !important;
         line-height: 32px !important;
@@ -114,7 +110,7 @@ body {
 }
 
 @media (max-width: 1013px) {
-    .tile-extraSmall .kpi-module__hero {
+    .tile-size-xs .kpi-module__hero {
         font-size: 32px !important;
         font-weight: 300 !important;
         line-height: 32px !important;
@@ -144,26 +140,81 @@ body {
   margin-top: 0px !important;
 }
 
-/* action button always visible */
-.answer-actions-container-module__answerActionsHorizontal:not(:focus-within) .answer-actions-container-module__answerActionsCompact {
+.bk-pinboard-data-viz {
+    box-shadow: none !important;
+}
+
+.tile-size-xs .bk-pinboard-data-viz {
+    border-left: 1px solid #efefef;
+}
+
+.tile-size-xs .bk-pb-card-action-menu {
+    display: none !important;
+}
+
+/* hiding the color palette */
+.colorpicker-module__content{
+    display: none !important;
+}
+
+body .popover-module__positionable.popover-module__in {
     display: block !important;
 }
 
-/* hiding ask sage button */
-.button-module__buttonWrapper.answer-actions-container-module__primaryActionButton {
+.bk-sharable-item-content-container {
+    overflow-y: hidden !important;
+}
+
+/* Expand-collapse box-shadowing none */
+
+.MuiButtonBase-root.MuiFab-root.MuiFab-circular.MuiFab-sizeSmall.MuiFab-default.MuiFab-root:active {
+    box-shadow: none !important;
+}
+
+/* Maximize Chart Secondary description */
+.answer-title-module__descriptionText.answer-title-module__descriptionTextOneLine.content-editable-module__contentEditable {
     display: none !important;
 }
 
-/* .button-module__button.button-module__buttonWithText {
-    display: none !important;
-} */
+/* Maximize 3dot option on hover issue */
+.tile-undefined .answer-actions-container-module__answerActionsHorizontal:not(:focus-within) .answer-actions-container-module__answerActionsCompact {
+    display: block !important;
+}
+
+/* KPI 3dot option enabled */
+.tile-size-xs .bk-pb-card-action-menu {
+    margin: -1em -1em 0em 0em !important;
+    display: block !important;
+}
+
+.bk-action-dropdown.popover.bottom {
+    margin-top: 5px !important;
+}
+
+.bk-action-dropdown.popover.bottom .bk-action-menu {
+    padding: 0px !important;
+}
+
+/* KPI Error style */
+
+.muted-alert-module__container.muted-alert-module__regular.muted-alert-module__local .muted-alert-module__illustration.muted-alert-module__local.muted-alert-module__regular {
+    width: 2.5rem;
+    height: 2.5rem;
+    margin-bottom: 0.25rem;
+}
+
+
+.muted-alert-module__container.muted-alert-module__regular.muted-alert-module__local .muted-alert-module__content.muted-alert-module__local.muted-alert-module__regular .muted-alert-module__titleWrapper.muted-alert-module__local .typography-module__content-label-subhead {
+    font-size: 0.9rem !important;
+    line-height: 1 !important;
+}
+
+.muted-alert-module__container.muted-alert-module__regular.muted-alert-module__local .typography-module__body-normal {
+    font-size: 0.8rem !important;
+    line-height: 1.4 !important;
+}
 
 /* Disabling filter option */
 .menu-module__menuGroupWrapper div[data-testid="bk-filter-option"] {
-    display: none !important;
-}
-
-/* Disabling colour palette */
-.colorpicker-module__content {
     display: none !important;
 }
